fix layout bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -300,7 +300,7 @@ section {
     padding: 0 1em;
 }
 .first {
-    margin-top: -100px;
+    margin-top: -110px;
     padding: 0;
     padding-bottom: 3em;
     max-width: 760px;
